<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.RegisterActivity"
    android:background="@drawable/background_app">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_above="@+id/registerBTN">
        <LinearLayout
            android:id="@+id/linerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfil"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/default_male"
                app:civ_circle_background_color="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/name"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:id="@+id/pass"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/registerBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_app"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/registerBTN"
        android:textColor="@color/black"
        android:textSize="20dp" />
</RelativeLayout>