<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background_app"
    android:id="@+id/relativeLayout">
    <LinearLayout
        android:id="@+id/linearLayuot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_above="@+id/signInBTN">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signInTitle"
            android:textColor="@color/black"
            android:textSize="36dp"
            android:layout_margin="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_marginVertical="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:id="@+id/pass"
            android:layout_marginVertical="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/btn_chek_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_remember_me"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:text="@string/forget_pass"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signInBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_app"
        android:gravity="center"
        android:onClick="signInBTNOnClick"
        android:padding="10dp"
        android:text="@string/signInBTN"
        android:textColor="@color/black"
        android:textSize="20dp" />
</RelativeLayout>