<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_app">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_app"
            android:gravity="center"
            android:onClick="logoutUser"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="@string/SignOut"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_app"
            android:gravity="center"
            android:onClick="goToMathes"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="@string/Mathes"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_app"
            android:gravity="center"
            android:onClick="goToSettings"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="@string/Settings"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>
    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rotation_degrees="15.5"
        tools:context=".MyActivity" />
</LinearLayout>