<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.Pass_Reset_Activity"
    android:background="@drawable/background_app"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/relativ">

    <LinearLayout
        android:id="@+id/linerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageBTNBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.1"
            android:onClick="backOnClick"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Password_recovery"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_weight="0.1"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/btn_reset_pass_email_input"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="250dp"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enterEmailText"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_app"
        android:padding="10dp"
        android:text="@string/Restore"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>